Добавлены: Модели для Реестров(кроме реестра разрещений). Еще: CRUD-операции для этих моделей.

--- a/AisMKIT/Areas/Cinematography/Views/ListISRCFilms/Index.cshtml
+++ b/AisMKIT/Areas/Cinematography/Views/ListISRCFilms/Index.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <h1>
+        СПИСОК
+        выданных государственных регистрационных удостоверений
+        фильмам за 2019 год.
+    </h1>
 
 <p>
     <a asp-action="Create">Create New</a>
