--- a/AisMKIT/Views/Shared/_Layout.cshtml
+++ b/AisMKIT/Views/Shared/_Layout.cshtml
@@ -40,12 +40,12 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Реестра</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" asp-area="" asp-controller="ListOfEducations" asp-action="Index">Реестр  учебных  заведений  </a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Departments" asp-action="Index">Реестр библиотек республики</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Departments" asp-action="Index">Реестр охраняемых объектов культурного наследия</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Departments" asp-action="Index">Реестр объектов произведений культуры и искусства</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Departments" asp-action="Index">Реестр подведомственных учреждений </a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Departments" asp-action="Index">Реестр государственных и ведомственных наград</a>
+                                <a class="dropdown-item" asp-area="EduInstitutions" asp-controller="Main" asp-action="Index">Реестр  учебных  заведений  </a>
+                                <a class="dropdown-item" asp-area="Libraries" asp-controller="Main" asp-action="Index">Реестр библиотек республики</a>
+                                <a class="dropdown-item" asp-area="CultHeritages" asp-controller="Main" asp-action="Index">Реестр охраняемых объектов культурного наследия</a>
+                                <a class="dropdown-item" asp-area="CultObjectsAndArts" asp-controller="Main" asp-action="Index">Реестр объектов произведений культуры и искусства</a>
+                                <a class="dropdown-item" asp-area="SubInstitutions" asp-controller="Main" asp-action="Index">Реестр подведомственных учреждений </a>
+                                <a class="dropdown-item" asp-area="Awards" asp-controller="Main" asp-action="Index">Реестр государственных и ведомственных наград</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Departments" asp-action="Index">Реестр выданных разрешений</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Separated link</a>
@@ -58,7 +58,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="" asp-controller="Role" asp-action="Index">Роли</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Role" asp-action="UserIndex">Пользователи</a>
-                                
+
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Separated link</a>
                             </div>
@@ -71,8 +71,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Cinematography" asp-controller="Test" asp-action="Index">Areas</a>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Areas</a>
+                            <div class="dropdown-menu">
+                                <a class="nav-link text-dark" asp-area="Cinematography" asp-controller="Main" asp-action="Index">Киномотография</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
