--- a/AisMKIT/Areas/EduInstitutions/Views/Positions/Index.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Positions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AisMKIT.Models.Faculty>
+﻿@model IEnumerable<AisMKIT.Models.Position>
 
 @{
     ViewData["Title"] = "Index";
@@ -15,12 +15,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.listOfEducationsModel)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,12 +23,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.listOfEducationsModel.Address)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
