--- a/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Delete.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AisMKIT.Models.Faculty
+﻿@model AisMKIT.Models.EmplPosHistory
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,26 +8,26 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Faculty</h4>
+    <h4>EmplPosHistory</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            @Html.DisplayFor(model => model.Employee.Id)
+        </dd class>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Position)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            @Html.DisplayFor(model => model.Position.Id)
+        </dd class>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.listOfEducationsModel)
+            @Html.DisplayNameFor(model => model.Faculty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.listOfEducationsModel.Address)
+            @Html.DisplayFor(model => model.Faculty.Id)
         </dd class>
     </dl>
     
