--- a/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Index.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AisMKIT.Models.Faculty>
+﻿@model IEnumerable<AisMKIT.Models.EmplPosHistory>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,13 +13,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Employee)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.Position)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.listOfEducationsModel)
+                @Html.DisplayNameFor(model => model.Faculty)
             </th>
             <th></th>
         </tr>
@@ -28,13 +28,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Employee.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Position.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.listOfEducationsModel.Address)
+                @Html.DisplayFor(modelItem => item.Faculty.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
