--- a/AisMKIT/Areas/EduInstitutions/Views/Positions/Delete.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Positions/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AisMKIT.Models.Employee
+﻿@model AisMKIT.Models.Position
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,20 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Employee</h4>
+    <h4>Position</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SecondName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SecondName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
     
