--- a/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Create.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Create.cshtml
@@ -21,6 +21,10 @@
                 <select asp-for="EducationalUnitId" class ="form-control" asp-items="ViewBag.EducationalUnitId"></select>
             </div>
             <div class="form-group">
+                <label asp-for="FacultyId" class="control-label"></label>
+                <select asp-for="FacultyId" class ="form-control" asp-items="ViewBag.FacultyId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
