--- a/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Details.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EducationalUnit.Id)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Faculty)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Faculty.Id)
+        </dd>
     </dl>
 </div>
 <div>
