--- a/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Index.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.EducationalUnit)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Faculty)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +32,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EducationalUnit.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Faculty.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
