--- a/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Edit.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplEducationalUnits/Edit.cshtml
@@ -24,6 +24,16 @@
                 <span asp-validation-for="EducationalUnitId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="WorkStartDate" class="control-label"></label>
+                <input asp-for="WorkStartDate" class="form-control" />
+                <span asp-validation-for="WorkStartDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="WorkEndDate" class="control-label"></label>
+                <input asp-for="WorkEndDate" class="form-control" />
+                <span asp-validation-for="WorkEndDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="FacultyId" class="control-label"></label>
                 <select asp-for="FacultyId" class="form-control" asp-items="ViewBag.FacultyId"></select>
                 <span asp-validation-for="FacultyId" class="text-danger"></span>
