--- a/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Create.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Create.cshtml
@@ -21,6 +21,16 @@
                 <select asp-for="PositionId" class ="form-control" asp-items="ViewBag.PositionId"></select>
             </div>
             <div class="form-group">
+                <label asp-for="WorkStartDate" class="control-label"></label>
+                <input asp-for="WorkStartDate" class="form-control" />
+                <span asp-validation-for="WorkStartDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="WorkEndDate" class="control-label"></label>
+                <input asp-for="WorkEndDate" class="form-control" />
+                <span asp-validation-for="WorkEndDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="FacultyId" class="control-label"></label>
                 <select asp-for="FacultyId" class ="form-control" asp-items="ViewBag.FacultyId"></select>
             </div>
