--- a/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Delete.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/EmplPosHistories/Delete.cshtml
@@ -24,6 +24,18 @@
             @Html.DisplayFor(model => model.Position.Id)
         </dd class>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.WorkStartDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.WorkStartDate)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.WorkEndDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.WorkEndDate)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Faculty)
         </dt>
         <dd class = "col-sm-10">
