--- a/AisMKIT/Areas/EduInstitutions/Views/Employees/Create.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Employees/Create.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="SecondName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="FullName" class="control-label"></label>
+                <input asp-for="FullName" class="form-control" />
+                <span asp-validation-for="FullName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
