--- a/AisMKIT/Areas/EduInstitutions/Views/Employees/Delete.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Employees/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SecondName)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FullName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FullName)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
