--- a/AisMKIT/Areas/EduInstitutions/Views/Faculties/Create.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Faculties/Create.cshtml
@@ -23,8 +23,8 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ListOfEducationsId" class="control-label"></label>
-                <select asp-for="ListOfEducationsId" class ="form-control" asp-items="ViewBag.ListOfEducationsId"></select>
+                <label asp-for="EduInstitutionId" class="control-label"></label>
+                <select asp-for="EduInstitutionId" class ="form-control" asp-items="ViewBag.EduInstitutionId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
