--- a/AisMKIT/Areas/EduInstitutions/Views/Faculties/Details.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Faculties/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.listOfEducationsModel)
+            @Html.DisplayNameFor(model => model.EduInstitution)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.listOfEducationsModel.Address)
+            @Html.DisplayFor(model => model.EduInstitution.Address)
         </dd>
     </dl>
 </div>
