--- a/AisMKIT/Areas/EduInstitutions/Views/Faculties/Edit.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Faculties/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ListOfEducationsId" class="control-label"></label>
-                <select asp-for="ListOfEducationsId" class="form-control" asp-items="ViewBag.ListOfEducationsId"></select>
-                <span asp-validation-for="ListOfEducationsId" class="text-danger"></span>
+                <label asp-for="EduInstitutionId" class="control-label"></label>
+                <select asp-for="EduInstitutionId" class="form-control" asp-items="ViewBag.EduInstitutionId"></select>
+                <span asp-validation-for="EduInstitutionId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
