--- a/AisMKIT/Areas/EduInstitutions/Views/Faculties/Index.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Faculties/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.listOfEducationsModel)
+                @Html.DisplayNameFor(model => model.EduInstitution)
             </th>
             <th></th>
         </tr>
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.listOfEducationsModel.Address)
+                @Html.DisplayFor(modelItem => item.EduInstitution.Address)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
