--- a/AisMKIT/Areas/EduInstitutions/Views/Main/Create.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Main/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AisMKIT.Models.ListOfEducations
+﻿@model AisMKIT.Models.EduInstitution
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>ListOfEducations</h4>
+<h4>EduInstitution</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,9 +33,24 @@
                 <span asp-validation-for="DomenNames" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Fax" class="control-label"></label>
+                <input asp-for="Fax" class="form-control" />
+                <span asp-validation-for="Fax" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="DateOfCreated" class="control-label"></label>
                 <input asp-for="DateOfCreated" class="form-control" />
                 <span asp-validation-for="DateOfCreated" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="BriefInfo" class="control-label"></label>
+                <input asp-for="BriefInfo" class="form-control" />
+                <span asp-validation-for="BriefInfo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ClUchZavedCategoryId" class="control-label"></label>
