--- a/AisMKIT/Areas/EduInstitutions/Views/Main/Delete.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Main/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AisMKIT.Models.ListOfEducations
+﻿@model AisMKIT.Models.EduInstitution
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ListOfEducations</h4>
+    <h4>EduInstitution</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -36,10 +36,28 @@
             @Html.DisplayFor(model => model.DomenNames)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Fax)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Fax)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateOfCreated)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateOfCreated)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BriefInfo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BriefInfo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ClUchZavedCategory)
