--- a/AisMKIT/Areas/EduInstitutions/Views/Main/Index.cshtml
+++ b/AisMKIT/Areas/EduInstitutions/Views/Main/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<AisMKIT.Models.ListOfEducations>
+﻿@model IEnumerable<AisMKIT.Models.EduInstitution>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-    <h1>  Государственный  реестр  учебных  заведений  при  Министерстве  </h1>
+<h1>Реестр учебных заведений</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Добавить</a>
 </p>
 <table class="table">
     <thead>
@@ -25,7 +25,16 @@
                 @Html.DisplayNameFor(model => model.DomenNames)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Fax)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.DateOfCreated)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BriefInfo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ClUchZavedCategory)
@@ -49,15 +58,24 @@
                 @Html.DisplayFor(modelItem => item.DomenNames)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Fax)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.DateOfCreated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BriefInfo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ClUchZavedCategory.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Редактировать</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Подробнее</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
             </td>
         </tr>
 }
